🚚 Rename File to Artifact

--- a/docs/bulkrna.ipynb
+++ b/docs/bulkrna.ipynb
@@ -80,7 +80,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We start by simulating a [nf-core RNA-seq](https://nf-co.re/rnaseq) run which yields us a count matrix file.\n",
+    "We start by simulating a [nf-core RNA-seq](https://nf-co.re/rnaseq) run which yields us a count matrix artifact.\n",
     "\n",
     "(See {doc}`docs:nextflow` for running this with Nextflow.)"
    ]
@@ -106,7 +106,7 @@
     "# move it into the output directory\n",
     "path = path.rename(f\"./test-bulkrna/output_dir/{path.name}\")\n",
     "# register it\n",
-    "ln.File(path, description=\"Merged Bulk RNA counts\").save()"
+    "ln.Artifact(path, description=\"Merged Bulk RNA counts\").save()"
    ]
   },
   {
@@ -129,7 +129,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's query the file:"
+    "Let's query the artifact:"
    ]
   },
   {
@@ -138,7 +138,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = ln.File.filter(description=\"Merged Bulk RNA counts\").one()"
+    "artifact = ln.Artifact.filter(description=\"Merged Bulk RNA counts\").one()"
    ]
   },
   {
@@ -147,7 +147,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = file.load()"
+    "df = artifact.load()"
    ]
   },
   {
@@ -259,7 +259,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's create a File object from this AnnData. Because this will validate the gene IDs and these are only defined given a organism, we have to set a organism context:"
+    "Let's create a Artifact object from this AnnData. Because this will validate the gene IDs and these are only defined given a organism, we have to set a organism context:"
    ]
   },
   {
@@ -325,7 +325,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "curated_file = ln.File.from_anndata(\n",
+    "curated_file = ln.Artifact.from_anndata(\n",
     "    adata, description=\"Curated bulk RNA counts\", field=lb.Gene.stable_id\n",
     ")"
    ]
@@ -334,7 +334,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Hence, let's save this file:"
+    "Hence, let's save this artifact:"
    ]
   },
   {
@@ -391,7 +391,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We have two files in the file registry:"
+    "We have two files in the artifact registry:"
    ]
   },
   {
@@ -400,7 +400,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.File.filter().df()"
+    "ln.Artifact.filter().df()"
    ]
   },
   {
@@ -454,7 +454,7 @@
    "outputs": [],
    "source": [
     "# files that link to this feature set\n",
-    "ln.File.filter(feature_sets=feature_set).df()"
+    "ln.Artifact.filter(feature_sets=feature_set).df()"
    ]
   },
   {
