--- a/docs/celltypist.ipynb
+++ b/docs/celltypist.ipynb
@@ -114,11 +114,11 @@
     "celltypist_source_v2_url = \"https://github.com/Teichlab/celltypist_wiki/raw/main/atlases/Pan_Immune_CellTypist/v2/tables/Basic_celltype_information.xlsx\"\n",
     "\n",
     "# our source data\n",
-    "celltypist_file = ln.File.filter(description=description).one_or_none()\n",
+    "celltypist_file = ln.Artifact.filter(description=description).one_or_none()\n",
     "\n",
     "if celltypist_file is None:\n",
     "    celltypist_df = pd.read_excel(celltypist_source_v2_url)\n",
-    "    celltypist_file = ln.File(celltypist_df).save()\n",
+    "    celltypist_file = ln.Artifact(celltypist_df).save()\n",
     "else:\n",
     "    celltypist_df = celltypist_file.load().head()"
    ]
