--- a/docs/facs2.ipynb
+++ b/docs/facs2.ipynb
@@ -20,7 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We have one file in storage and are about to receive a new shard of data.\n",
+    "We have one artifact in storage and are about to receive a new shard of data.\n",
     "\n",
     "In this notebook, we'll see how to manage the situation."
    ]
@@ -51,7 +51,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Ingest a new file"
+    "## Ingest a new artifact"
    ]
   },
   {
@@ -65,7 +65,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let us validate and register another `.fcs` file from [Oetjen18](https://insight.jci.org/articles/view/124928):"
+    "Let us validate and register another `.fcs` artifact from [Oetjen18](https://insight.jci.org/articles/view/124928):"
    ]
   },
   {
@@ -291,7 +291,7 @@
    },
    "outputs": [],
    "source": [
-    "file = ln.File.from_anndata(\n",
+    "artifact = ln.Artifact.from_anndata(\n",
     "    adata,\n",
     "    description=\"Oetjen18_t1\",\n",
     "    field=lb.CellMarker.name,\n",
@@ -304,7 +304,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file.save()"
+    "artifact.save()"
    ]
   },
   {
@@ -313,8 +313,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file.labels.add(efs.fluorescence_activated_cell_sorting, features.assay)\n",
-    "file.labels.add(organism.human, features.organism)"
+    "artifact.labels.add(efs.fluorescence_activated_cell_sorting, features.assay)\n",
+    "artifact.labels.add(organism.human, features.organism)"
    ]
   },
   {
@@ -323,7 +323,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file.features"
+    "artifact.features"
    ]
   },
   {
@@ -339,7 +339,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file.view_flow()"
+    "artifact.view_flow()"
    ]
   },
   {
@@ -365,7 +365,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create a new version of the dataset by appending a file"
+    "## Create a new version of the dataset by appending a artifact"
    ]
   },
   {
@@ -391,7 +391,7 @@
    "outputs": [],
    "source": [
     "dataset_v2 = ln.Dataset(\n",
-    "    [file, dataset_v1.file], is_new_version_of=dataset_v1, version=\"2\"\n",
+    "    [artifact, dataset_v1.artifact], is_new_version_of=dataset_v1, version=\"2\"\n",
     ")"
    ]
   },
