--- a/docs/facs3.ipynb
+++ b/docs/facs3.ipynb
@@ -123,7 +123,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.File.filter(feature_sets__in=panels_with_cd8).df()"
+    "ln.Artifact.filter(feature_sets__in=panels_with_cd8).df()"
    ]
   },
   {
@@ -155,7 +155,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "files = ln.File.filter(feature_sets__in=panels_with_cd8).list()\n",
+    "files = ln.Artifact.filter(feature_sets__in=panels_with_cd8).list()\n",
     "file1, file2 = files[0], files[1]"
    ]
   },
