--- a/docs/facs4.ipynb
+++ b/docs/facs4.ipynb
@@ -121,9 +121,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = ln.File(\"./figures/pca_cd8.pdf\", description=\"My result on CD8\")\n",
+    "artifact = ln.Artifact(\"./figures/pca_cd8.pdf\", description=\"My result on CD8\")\n",
     "\n",
-    "file.save()"
+    "artifact.save()"
    ]
   },
   {
@@ -132,7 +132,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file.view_flow()"
+    "artifact.view_flow()"
    ]
   },
   {
