--- a/docs/multimodal.ipynb
+++ b/docs/multimodal.ipynb
@@ -118,7 +118,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First we register the file:"
+    "First we register the artifact:"
    ]
   },
   {
@@ -127,10 +127,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = ln.File(\n",
+    "artifact = ln.Artifact(\n",
     "    \"papalexi21_subset.h5mu\", description=\"Sub-sampled MuData from Papalexi21\"\n",
     ")\n",
-    "file.save()"
+    "artifact.save()"
    ]
   },
   {
@@ -292,7 +292,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Link them to file:"
+    "Link them to artifact:"
    ]
   },
   {
@@ -301,8 +301,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file.features.add_feature_set(feature_set_rna, slot=\"rna\")\n",
-    "file.features.add_feature_set(feature_set_adt, slot=\"adt\")"
+    "artifact.features.add_feature_set(feature_set_rna, slot=\"rna\")\n",
+    "artifact.features.add_feature_set(feature_set_adt, slot=\"adt\")"
    ]
   },
   {
@@ -362,7 +362,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file.features.add_feature_set(feature_set_obs, slot=\"obs\")"
+    "artifact.features.add_feature_set(feature_set_obs, slot=\"obs\")"
    ]
   },
   {
@@ -374,7 +374,7 @@
     "gene_targets = lb.Gene.from_values(obs[\"gene_target\"], lb.Gene.symbol)\n",
     "ln.save(gene_targets)\n",
     "features = ln.Feature.lookup()\n",
-    "file.labels.add(gene_targets, feature=features.gene_target)"
+    "artifact.labels.add(gene_targets, feature=features.gene_target)"
    ]
   },
   {
@@ -393,7 +393,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file.labels.add(nt, feature=features.gene_target)"
+    "artifact.labels.add(nt, feature=features.gene_target)"
    ]
   },
   {
@@ -411,7 +411,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Because none of these labels seem like something we'd want to track in the registry or validate, we don't link them to the file."
+    "Because none of these labels seem like something we'd want to track in the registry or validate, we don't link them to the artifact."
    ]
   },
   {
@@ -420,7 +420,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file.features"
+    "artifact.features"
    ]
   },
   {
@@ -429,7 +429,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file.describe()"
+    "artifact.describe()"
    ]
   },
   {
@@ -438,7 +438,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file.view_flow()"
+    "artifact.view_flow()"
    ]
   },
   {
