--- a/docs/project-flow.ipynb
+++ b/docs/project-flow.ipynb
@@ -137,7 +137,9 @@
     "    transform = ln.Transform(name=\"Upload GWS CRISPRa result\", type=\"app\")\n",
     "    ln.track(transform)\n",
     "    output_path = ln.dev.datasets.schmidt22_crispra_gws_IFNG(ln.settings.storage)\n",
-    "    output_file = ln.File(output_path, description=\"Raw data of schmidt22 crispra GWS\")\n",
+    "    output_file = ln.Artifact(\n",
+    "        output_path, description=\"Raw data of schmidt22 crispra GWS\"\n",
+    "    )\n",
     "    output_file.save()\n",
     "\n",
     "\n",
@@ -176,15 +178,15 @@
     "    transform = ln.Transform(name=\"GWS CRIPSRa analysis\", type=\"notebook\")\n",
     "    ln.track(transform)\n",
     "\n",
-    "    # access the upload file\n",
-    "    input_file = ln.File.filter(key=\"schmidt22-crispra-gws-IFNG.csv\").one()\n",
+    "    # access the upload artifact\n",
+    "    input_file = ln.Artifact.filter(key=\"schmidt22-crispra-gws-IFNG.csv\").one()\n",
     "\n",
     "    # identify hits\n",
     "    input_df = input_file.load().set_index(\"id\")\n",
     "    output_df = input_df[input_df[\"pos|fdr\"] < 0.01].copy()\n",
     "\n",
-    "    # register hits in output file\n",
-    "    ln.File(output_df, description=\"hits from schmidt22 crispra GWS\").save()\n",
+    "    # register hits in output artifact\n",
+    "    ln.Artifact(output_df, description=\"hits from schmidt22 crispra GWS\").save()\n",
     "\n",
     "\n",
     "run_hit_identification_notebook()"
@@ -203,8 +205,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = ln.File.filter(description=\"hits from schmidt22 crispra GWS\").one()\n",
-    "file.view_flow()"
+    "artifact = ln.Artifact.filter(description=\"hits from schmidt22 crispra GWS\").one()\n",
+    "artifact.view_flow()"
    ]
   },
   {
@@ -240,8 +242,8 @@
     "    upload_dir = ln.dev.datasets.dir_scrnaseq_cellranger(\n",
     "        \"perturbseq\", basedir=ln.settings.storage, output_only=False\n",
     "    )\n",
-    "    ln.File(upload_dir.parent / \"fastq/perturbseq_R1_001.fastq.gz\").save()\n",
-    "    ln.File(upload_dir.parent / \"fastq/perturbseq_R2_001.fastq.gz\").save()\n",
+    "    ln.Artifact(upload_dir.parent / \"fastq/perturbseq_R1_001.fastq.gz\").save()\n",
+    "    ln.Artifact(upload_dir.parent / \"fastq/perturbseq_R2_001.fastq.gz\").save()\n",
     "\n",
     "\n",
     "run_upload_from_sequencer_pipeline()"
@@ -278,10 +280,12 @@
     "    transform = ln.Transform(name=\"Cell Ranger\", version=\"7.2.0\", type=\"pipeline\")\n",
     "    ln.track(transform)\n",
     "    # access uploaded files as inputs for the pipeline\n",
-    "    input_files = ln.File.filter(key__startswith=\"fastq/perturbseq\").all()\n",
-    "    input_paths = [file.stage() for file in input_files]\n",
+    "    input_files = ln.Artifact.filter(key__startswith=\"fastq/perturbseq\").all()\n",
+    "    input_paths = [artifact.stage() for artifact in input_files]\n",
     "    # register output files\n",
-    "    output_files = ln.File.from_dir(\"./mydata/perturbseq/filtered_feature_bc_matrix/\")\n",
+    "    output_files = ln.Artifact.from_dir(\n",
+    "        \"./mydata/perturbseq/filtered_feature_bc_matrix/\"\n",
+    "    )\n",
     "    ln.save(output_files)\n",
     "\n",
     "    # Post-process these 3 files\n",
@@ -291,7 +295,7 @@
     "    ln.track(transform)\n",
     "    input_files = [f.stage() for f in output_files]\n",
     "    output_path = ln.dev.datasets.schmidt22_perturbseq(basedir=ln.settings.storage)\n",
-    "    output_file = ln.File(output_path, description=\"perturbseq counts\")\n",
+    "    output_file = ln.Artifact(output_path, description=\"perturbseq counts\")\n",
     "    output_file.save()\n",
     "\n",
     "\n",
@@ -311,7 +315,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "output_file = ln.File.filter(description=\"perturbseq counts\").one()\n",
+    "output_file = ln.Artifact.filter(description=\"perturbseq counts\").one()\n",
     "output_file.view_flow()"
    ]
   },
@@ -350,9 +354,9 @@
     "    ln.track(transform)\n",
     "\n",
     "    # access the output files of bfx pipeline and previous analysis\n",
-    "    file_ps = ln.File.filter(description__icontains=\"perturbseq\").one()\n",
+    "    file_ps = ln.Artifact.filter(description__icontains=\"perturbseq\").one()\n",
     "    adata = file_ps.load()\n",
-    "    file_hits = ln.File.filter(description=\"hits from schmidt22 crispra GWS\").one()\n",
+    "    file_hits = ln.Artifact.filter(description=\"hits from schmidt22 crispra GWS\").one()\n",
     "    screen_hits = file_hits.load()\n",
     "\n",
     "    # perform analysis and register output plot files\n",
@@ -360,15 +364,15 @@
     "    filesuffix = \"_fig1_score-wgs-hits.png\"\n",
     "    sc.pl.umap(adata, color=\"score\", show=False, save=filesuffix)\n",
     "    filepath = f\"figures/umap{filesuffix}\"\n",
-    "    file = ln.File(filepath, key=filepath)\n",
-    "    file.save()\n",
+    "    artifact = ln.Artifact(filepath, key=filepath)\n",
+    "    artifact.save()\n",
     "    filesuffix = \"fig2_score-wgs-hits-per-cluster.png\"\n",
     "    sc.pl.matrixplot(\n",
     "        adata, groupby=\"cluster_name\", var_names=[\"score\"], show=False, save=filesuffix\n",
     "    )\n",
     "    filepath = f\"figures/matrixplot_{filesuffix}\"\n",
-    "    file = ln.File(filepath, key=filepath)\n",
-    "    file.save()\n",
+    "    artifact = ln.Artifact(filepath, key=filepath)\n",
+    "    artifact.save()\n",
     "\n",
     "\n",
     "run_integrated_analysis_notebook()"
@@ -401,8 +405,8 @@
    "source": [
     "# track the current notebook as transform\n",
     "ln.track()\n",
-    "file = ln.File.filter(key__contains=\"figures/matrixplot\").one()\n",
-    "file.stage()"
+    "artifact = ln.Artifact.filter(key__contains=\"figures/matrixplot\").one()\n",
+    "artifact.stage()"
    ]
   },
   {
@@ -411,14 +415,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "display(Image(filename=file.path))"
+    "display(Image(filename=artifact.path))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We see that the image file is tracked as an input of the current notebook. The input is highlighted, the notebook follows at the bottom:"
+    "We see that the image artifact is tracked as an input of the current notebook. The input is highlighted, the notebook follows at the bottom:"
    ]
   },
   {
@@ -427,7 +431,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file.view_flow()"
+    "artifact.view_flow()"
    ]
   },
   {
@@ -472,7 +476,7 @@
    "source": [
     "We tracked pipeline and notebook runs through {class}`~docs:lamindb.dev.run_context`, which stores a {class}`~docs:lamindb.Transform` and a {class}`~docs:lamindb.Run` record as a global context.\n",
     "\n",
-    "{class}`~lamindb.File` objects are the inputs and outputs of runs. "
+    "{class}`~lamindb.Artifact` objects are the inputs and outputs of runs. "
    ]
   },
   {
@@ -482,10 +486,10 @@
    "source": [
     ":::{dropdown} What if I don't want a global context?\n",
     "\n",
-    "Sometimes, we don't want to create a global run context but manually pass a run when creating a file:\n",
+    "Sometimes, we don't want to create a global run context but manually pass a run when creating a artifact:\n",
     "```python\n",
     "run = ln.Run(transform=transform)\n",
-    "ln.File(filepath, run=run)\n",
+    "ln.Artifact(filepath, run=run)\n",
     "```\n",
     "\n",
     ":::"
@@ -496,18 +500,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ":::{dropdown} When does a file appear as a run input?\n",
+    ":::{dropdown} When does a artifact appear as a run input?\n",
     "\n",
-    "When accessing a file via `stage()`, `load()` or `backed()`, two things happen:\n",
+    "When accessing a artifact via `stage()`, `load()` or `backed()`, two things happen:\n",
     "\n",
-    "1. The current run gets added to `file.input_of`\n",
-    "2. The transform of that file gets added as a parent of the current transform\n",
+    "1. The current run gets added to `artifact.input_of`\n",
+    "2. The transform of that artifact gets added as a parent of the current transform\n",
     "\n",
     "You can then switch off auto-tracking of run inputs if you set `ln.settings.track_run_inputs = False`: {doc}`docs:faq/track-run-inputs`\n",
     "\n",
     "You can also track run inputs on a case by case basis via `is_run_input=True`, e.g., here:\n",
     "```python\n",
-    "file.load(is_run_input=True)\n",
+    "artifact.load(is_run_input=True)\n",
     "```\n",
     "\n",
     ":::"
@@ -526,7 +530,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can query or search for the notebook that created the file:"
+    "We can query or search for the notebook that created the artifact:"
    ]
   },
   {
@@ -552,7 +556,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.File.filter(transform=transform).df()"
+    "ln.Artifact.filter(transform=transform).df()"
    ]
   },
   {
@@ -560,7 +564,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Which transform ingested a given file?"
+    "Which transform ingested a given artifact?"
    ]
   },
   {
@@ -569,8 +573,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = ln.File.filter().first()\n",
-    "file.transform"
+    "artifact = ln.Artifact.filter().first()\n",
+    "artifact.transform"
    ]
   },
   {
@@ -587,7 +591,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file.created_by"
+    "artifact.created_by"
    ]
   },
   {
