--- a/docs/spatial.ipynb
+++ b/docs/spatial.ipynb
@@ -149,7 +149,7 @@
    },
    "outputs": [],
    "source": [
-    "file_ad = ln.File.from_anndata(\n",
+    "file_ad = ln.Artifact.from_anndata(\n",
     "    adata,\n",
     "    description=\"Suo22 Visium10X image F121_LP1_4LIV\",\n",
     "    field=lb.Gene.ensembl_gene_id,\n",
@@ -167,7 +167,7 @@
    },
    "outputs": [],
    "source": [
-    "file_img = ln.File(img_path, description=\"Suo22 image F121_LP1_4LIV\")\n",
+    "file_img = ln.Artifact(img_path, description=\"Suo22 image F121_LP1_4LIV\")\n",
     "file_img.save()"
    ]
   },
