--- a/docs/facs.ipynb
+++ b/docs/facs.ipynb
@@ -31,8 +31,8 @@
    "source": [
     "Specifically, you will\n",
     "\n",
-    "1. read a single `.fcs` file as an `AnnData` and seed a versioned dataset with it (![facs1/4](https://img.shields.io/badge/facs1/4-lightgrey), current page)\n",
-    "2. append a new data shard (a new `.fcs` file) to create a new version of the dataset ([![facs2/4](https://img.shields.io/badge/facs2/4-lightgrey)](facs2))\n",
+    "1. read a single `.fcs` artifact as an `AnnData` and seed a versioned dataset with it (![facs1/4](https://img.shields.io/badge/facs1/4-lightgrey), current page)\n",
+    "2. append a new data shard (a new `.fcs` artifact) to create a new version of the dataset ([![facs2/4](https://img.shields.io/badge/facs2/4-lightgrey)](facs2))\n",
     "3. query individual files and cell markers ([![facs3/4](https://img.shields.io/badge/facs3/4-lightgrey)](facs3))\n",
     "4. analyze the dataset and store results as plots ([![facs4/4](https://img.shields.io/badge/facs4/4-lightgrey)](facs4))\n",
     "\n",
@@ -94,7 +94,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Ingest a first file"
+    "## Ingest a first artifact"
    ]
   },
   {
@@ -108,9 +108,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We start with a flow cytometry file from [Alpert *et al.*, Nat. Med. (2019)](https://pubmed.ncbi.nlm.nih.gov/30842675/).\n",
+    "We start with a flow cytometry artifact from [Alpert *et al.*, Nat. Med. (2019)](https://pubmed.ncbi.nlm.nih.gov/30842675/).\n",
     "\n",
-    "Calling the following function downloads the file and pre-populates a few relevant registries:"
+    "Calling the following function downloads the artifact and pre-populates a few relevant registries:"
    ]
   },
   {
@@ -129,7 +129,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We use [readfcs](https://lamin.ai/docs/readfcs) to read the raw fcs file into memory and create an `AnnData` object:"
+    "We use [readfcs](https://lamin.ai/docs/readfcs) to read the raw fcs artifact into memory and create an `AnnData` object:"
    ]
   },
   {
@@ -441,7 +441,9 @@
    },
    "outputs": [],
    "source": [
-    "file = ln.File.from_anndata(adata, description=\"Alpert19\", field=lb.CellMarker.name)"
+    "artifact = ln.Artifact.from_anndata(\n",
+    "    adata, description=\"Alpert19\", field=lb.CellMarker.name\n",
+    ")"
    ]
   },
   {
@@ -452,14 +454,14 @@
    },
    "outputs": [],
    "source": [
-    "file.save()"
+    "artifact.save()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Inspect the registered file"
+    "## Inspect the registered artifact"
    ]
   },
   {
@@ -475,7 +477,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file.features"
+    "artifact.features"
    ]
   },
   {
@@ -491,7 +493,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file.features[\"var\"].df().head()"
+    "artifact.features[\"var\"].df().head()"
    ]
   },
   {
@@ -507,7 +509,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "markers = file.features[\"var\"].lookup()"
+    "markers = artifact.features[\"var\"].lookup()"
    ]
   },
   {
@@ -551,14 +553,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file.view_flow()"
+    "artifact.view_flow()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create a dataset from the file"
+    "## Create a dataset from the artifact"
    ]
   },
   {
@@ -567,7 +569,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = ln.Dataset(file, name=\"My versioned cytometry dataset\", version=\"1\")\n",
+    "dataset = ln.Dataset(artifact, name=\"My versioned cytometry dataset\", version=\"1\")\n",
     "\n",
     "dataset"
    ]
@@ -576,7 +578,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's inspect the features measured in this dataset which were inherited from the file:"
+    "Let's inspect the features measured in this dataset which were inherited from the artifact:"
    ]
   },
   {
