--- a/docs/facs.ipynb
+++ b/docs/facs.ipynb
@@ -31,8 +31,8 @@
    "source": [
     "Specifically, you will\n",
     "\n",
-    "1. read a single `.fcs` artifact as an `AnnData` and seed a versioned dataset with it (![facs1/4](https://img.shields.io/badge/facs1/4-lightgrey), current page)\n",
-    "2. append a new data shard (a new `.fcs` artifact) to create a new version of the dataset ([![facs2/4](https://img.shields.io/badge/facs2/4-lightgrey)](facs2))\n",
+    "1. read a single `.fcs` file as an `AnnData` and seed a versioned dataset with it (![facs1/4](https://img.shields.io/badge/facs1/4-lightgrey), current page)\n",
+    "2. append a new data shard (a new `.fcs` file) to create a new version of the dataset ([![facs2/4](https://img.shields.io/badge/facs2/4-lightgrey)](facs2))\n",
     "3. query individual files and cell markers ([![facs3/4](https://img.shields.io/badge/facs3/4-lightgrey)](facs3))\n",
     "4. analyze the dataset and store results as plots ([![facs4/4](https://img.shields.io/badge/facs4/4-lightgrey)](facs4))\n",
     "\n",
@@ -108,7 +108,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We start with a flow cytometry artifact from [Alpert *et al.*, Nat. Med. (2019)](https://pubmed.ncbi.nlm.nih.gov/30842675/).\n",
+    "We start with a flow cytometry file from [Alpert *et al.*, Nat. Med. (2019)](https://pubmed.ncbi.nlm.nih.gov/30842675/).\n",
     "\n",
     "Calling the following function downloads the artifact and pre-populates a few relevant registries:"
    ]
@@ -129,7 +129,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We use [readfcs](https://lamin.ai/docs/readfcs) to read the raw fcs artifact into memory and create an `AnnData` object:"
+    "We use [readfcs](https://lamin.ai/docs/readfcs) to read the raw fcs file into memory and create an `AnnData` object:"
    ]
   },
   {
