--- a/docs/facs2.ipynb
+++ b/docs/facs2.ipynb
@@ -65,7 +65,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let us validate and register another `.fcs` artifact from [Oetjen18](https://insight.jci.org/articles/view/124928):"
+    "Let us validate and register another `.fcs` file from [Oetjen18](https://insight.jci.org/articles/view/124928):"
    ]
   },
   {
