--- a/docs/project-flow.ipynb
+++ b/docs/project-flow.ipynb
@@ -486,7 +486,7 @@
    "source": [
     ":::{dropdown} What if I don't want a global context?\n",
     "\n",
-    "Sometimes, we don't want to create a global run context but manually pass a run when creating a artifact:\n",
+    "Sometimes, we don't want to create a global run context but manually pass a run when creating an artifact:\n",
     "```python\n",
     "run = ln.Run(transform=transform)\n",
     "ln.Artifact(filepath, run=run)\n",
@@ -500,9 +500,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ":::{dropdown} When does a artifact appear as a run input?\n",
+    ":::{dropdown} When does an artifact appear as a run input?\n",
     "\n",
-    "When accessing a artifact via `stage()`, `load()` or `backed()`, two things happen:\n",
+    "When accessing an artifact via `stage()`, `load()` or `backed()`, two things happen:\n",
     "\n",
     "1. The current run gets added to `artifact.input_of`\n",
     "2. The transform of that artifact gets added as a parent of the current transform\n",
