--- a/docs/analysis-flow.ipynb
+++ b/docs/analysis-flow.ipynb
@@ -370,7 +370,7 @@
     "logger.print(file_subset.created_by)\n",
     "\n",
     "print(\"\\n\\n--> And which artifact is its parent\\n\")\n",
-    "display(file_subset.run.input_files.df())"
+    "display(file_subset.run.input_artifacts.df())"
    ]
   },
   {
