--- a/docs/bulkrna.ipynb
+++ b/docs/bulkrna.ipynb
@@ -453,7 +453,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# files that link to this feature set\n",
+    "# artifacts that link to this feature set\n",
     "ln.Artifact.filter(feature_sets=feature_set).df()"
    ]
   },
