--- a/docs/facs3.ipynb
+++ b/docs/facs3.ipynb
@@ -98,7 +98,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Query files by markers ![](https://img.shields.io/badge/Access-10b981) "
+    "## Query artifacts by markers ![](https://img.shields.io/badge/Access-10b981) "
    ]
   },
   {
@@ -155,8 +155,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "files = ln.Artifact.filter(feature_sets__in=panels_with_cd8).list()\n",
-    "file1, file2 = files[0], files[1]"
+    "artifacts = ln.Artifact.filter(feature_sets__in=panels_with_cd8).list()\n",
+    "file1, file2 = artifacts[0], artifactsactsactsactsacts[1]"
    ]
   },
   {
