--- a/docs/project-flow.ipynb
+++ b/docs/project-flow.ipynb
@@ -130,7 +130,7 @@
    },
    "outputs": [],
    "source": [
-    "# This function mimics the upload of files via the UI\n",
+    "# This function mimics the upload of artifacts via the UI\n",
     "# In reality, you simply drag and drop files into the UI\n",
     "def run_upload_crispra_result_app():\n",
     "    ln.setup.login(\"testuser1\")\n",
@@ -280,20 +280,20 @@
     "    transform = ln.Transform(name=\"Cell Ranger\", version=\"7.2.0\", type=\"pipeline\")\n",
     "    ln.track(transform)\n",
     "    # access uploaded files as inputs for the pipeline\n",
-    "    input_files = ln.Artifact.filter(key__startswith=\"fastq/perturbseq\").all()\n",
-    "    input_paths = [artifact.stage() for artifact in input_files]\n",
+    "    input_artifacts = ln.Artifact.filter(key__startswith=\"fastq/perturbseq\").all()\n",
+    "    input_paths = [artifact.stage() for artifact in input_artifacts]\n",
     "    # register output files\n",
-    "    output_files = ln.Artifact.from_dir(\n",
+    "    output_artifacts = ln.Artifact.from_dir(\n",
     "        \"./mydata/perturbseq/filtered_feature_bc_matrix/\"\n",
     "    )\n",
-    "    ln.save(output_files)\n",
+    "    ln.save(output_artifacts)\n",
     "\n",
     "    # Post-process these 3 files\n",
     "    transform = ln.Transform(\n",
     "        name=\"Postprocess Cell Ranger\", version=\"2.0\", type=\"pipeline\"\n",
     "    )\n",
     "    ln.track(transform)\n",
-    "    input_files = [f.stage() for f in output_files]\n",
+    "    input_artifacts = [f.stage() for f in output_artifacts]\n",
     "    output_path = ln.dev.datasets.schmidt22_perturbseq(basedir=ln.settings.storage)\n",
     "    output_file = ln.Artifact(output_path, description=\"perturbseq counts\")\n",
     "    output_file.save()\n",
@@ -547,7 +547,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And then find all the files created by that notebook:"
+    "And then find all the artifacts created by that notebook:"
    ]
   },
   {
