--- a/docs/analysis-registries.ipynb
+++ b/docs/analysis-registries.ipynb
@@ -495,7 +495,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Querying for all files annotated with a cell type:"
+    "Querying for all artifacts annotated with a cell type:"
    ]
   },
   {
@@ -560,7 +560,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Query files from a pathway:"
+    "Query artifacts from a pathway:"
    ]
   },
   {
