--- a/docs/facs3.ipynb
+++ b/docs/facs3.ipynb
@@ -57,7 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lb.CellMarker.filter().df().head()"
+    "lb.CellMarker.df().head()"
    ]
   },
   {
@@ -156,7 +156,7 @@
    "outputs": [],
    "source": [
     "artifacts = ln.Artifact.filter(feature_sets__in=panels_with_cd8).list()\n",
-    "file1, file2 = artifacts[0], artifactsactsactsactsacts[1]"
+    "file1, file2 = artifacts[0], artifacts[1]"
    ]
   },
   {
