--- a/docs/facs4.ipynb
+++ b/docs/facs4.ipynb
@@ -68,7 +68,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adata.obs.file_uid.cat.categories"
+    "adata.obs.artifact_uid.cat.categories"
    ]
   },
   {
