🚚 Rename File to Artifact (#86)

--- a/docs/analysis-flow.ipynb
+++ b/docs/analysis-flow.ipynb
@@ -72,7 +72,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we register an initial file with a pipeline script."
+    "Here we register an initial artifact with a pipeline script."
    ]
   },
   {
@@ -89,9 +89,9 @@
     "\n",
     "\n",
     "def register_example_file():\n",
-    "    # create a pipeline transform to track the registration of the file\n",
+    "    # create a pipeline transform to track the registration of the artifact\n",
     "    transform = ln.Transform(\n",
-    "        name=\"register example file\", type=\"pipeline\", version=\"0.0.1\"\n",
+    "        name=\"register example artifact\", type=\"pipeline\", version=\"0.0.1\"\n",
     "    )\n",
     "    ln.track(transform)\n",
     "\n",
@@ -112,15 +112,15 @@
     "    diseases = lb.Disease.from_values(adata.obs[\"disease\"])\n",
     "    ln.save(diseases)\n",
     "\n",
-    "    # register file and annotate with features & labels\n",
-    "    file = ln.File.from_anndata(\n",
+    "    # register artifact and annotate with features & labels\n",
+    "    artifact = ln.Artifact.from_anndata(\n",
     "        adata, description=\"anndata with obs\", field=lb.Gene.ensembl_gene_id\n",
     "    )\n",
-    "    file.save()\n",
+    "    artifact.save()\n",
     "    features = ln.Feature.lookup()\n",
-    "    file.labels.add(cell_types, features.cell_type)\n",
-    "    file.labels.add(tissues, features.tissue)\n",
-    "    file.labels.add(diseases, features.disease)\n",
+    "    artifact.labels.add(cell_types, features.cell_type)\n",
+    "    artifact.labels.add(tissues, features.tissue)\n",
+    "    artifact.labels.add(diseases, features.disease)\n",
     "\n",
     "\n",
     "register_example_file()"
@@ -156,7 +156,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = ln.File.filter(description=\"anndata with obs\").one()"
+    "artifact = ln.Artifact.filter(description=\"anndata with obs\").one()"
    ]
   },
   {
@@ -165,7 +165,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file.describe()"
+    "artifact.describe()"
    ]
   },
   {
@@ -182,7 +182,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adata = file.backed()\n",
+    "adata = artifact.backed()\n",
     "adata"
    ]
   },
@@ -200,8 +200,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cell_types = file.cell_types.all().lookup(return_field=\"name\")\n",
-    "diseases = file.diseases.all().lookup(return_field=\"name\")"
+    "cell_types = artifact.cell_types.all().lookup(return_field=\"name\")\n",
+    "diseases = artifact.diseases.all().lookup(return_field=\"name\")"
    ]
   },
   {
@@ -256,7 +256,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_subset = ln.File.from_anndata(\n",
+    "file_subset = ln.Artifact.from_anndata(\n",
     "    adata_subset.to_memory(),\n",
     "    description=\"anndata with obs subset\",\n",
     "    field=lb.Gene.ensembl_gene_id,\n",
@@ -297,7 +297,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Query a subsetted `.h5ad` file containing \"hematopoietic stem cell\" and \"T cell\":"
+    "Query a subsetted `.h5ad` artifact containing \"hematopoietic stem cell\" and \"T cell\":"
    ]
   },
   {
@@ -315,7 +315,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "my_subset = ln.File.filter(\n",
+    "my_subset = ln.Artifact.filter(\n",
     "    suffix=\".h5ad\",\n",
     "    description__endswith=\"subset\",\n",
     "    cell_types__in=[\n",
@@ -341,11 +341,11 @@
    "source": [
     "Common questions that might arise are:\n",
     "\n",
-    "- What is the history of this file?\n",
+    "- What is the history of this artifact?\n",
     "- Which features and labels are associated with it?\n",
-    "- Which notebook analyzed and registered this file?\n",
+    "- Which notebook analyzed and registered this artifact?\n",
     "- By whom?\n",
-    "- And which file is its parent?\n",
+    "- And which artifact is its parent?\n",
     "\n",
     "Let's answer this using LaminDB:"
    ]
@@ -356,21 +356,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"--> What is the history of this file?\\n\")\n",
+    "print(\"--> What is the history of this artifact?\\n\")\n",
     "file_subset.view_flow()\n",
     "\n",
     "print(\"\\n\\n--> Which features and labels are associated with it?\\n\")\n",
     "logger.print(file_subset.features)\n",
     "logger.print(file_subset.labels)\n",
     "\n",
-    "print(\"\\n\\n--> Which notebook analyzed and registered this file\\n\")\n",
+    "print(\"\\n\\n--> Which notebook analyzed and registered this artifact\\n\")\n",
     "logger.print(file_subset.transform)\n",
     "\n",
     "print(\"\\n\\n--> By whom\\n\")\n",
     "logger.print(file_subset.created_by)\n",
     "\n",
-    "print(\"\\n\\n--> And which file is its parent\\n\")\n",
-    "display(file_subset.run.input_files.df())"
+    "print(\"\\n\\n--> And which artifact is its parent\\n\")\n",
+    "display(file_subset.run.input_artifacts.df())"
    ]
   },
   {
