--- a/docs/analysis-registries.ipynb
+++ b/docs/analysis-registries.ipynb
@@ -301,7 +301,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Register dataset using a File object:"
+    "Register dataset using a Artifact object:"
    ]
   },
   {
@@ -310,10 +310,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = ln.File.from_anndata(\n",
+    "artifact = ln.Artifact.from_anndata(\n",
     "    adata, description=\"seurat_ifnb_activated_Bcells\", field=lb.Gene.symbol\n",
     ")\n",
-    "file.save()"
+    "artifact.save()"
    ]
   },
   {
@@ -330,7 +330,7 @@
    "outputs": [],
    "source": [
     "cell_type_records = lb.CellType.from_values(adata.obs[\"cell_type_celltypist\"])\n",
-    "file.labels.add(cell_type_records, features.cell_type_celltypist)"
+    "artifact.labels.add(cell_type_records, features.cell_type_celltypist)"
    ]
   },
   {
@@ -347,7 +347,7 @@
    "outputs": [],
    "source": [
     "stim_records = ln.ULabel.from_values(adata.obs[\"stim\"])\n",
-    "file.labels.add(stim_records, features.stim)"
+    "artifact.labels.add(stim_records, features.stim)"
    ]
   },
   {
@@ -361,7 +361,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's enable tracking of the current notebook as the transform of this file:"
+    "Let's enable tracking of the current notebook as the transform of this artifact:"
    ]
   },
   {
@@ -390,9 +390,9 @@
     "    type=\"category\",\n",
     ")\n",
     "\n",
-    "# Link feature sets to file\n",
-    "file.features.add_feature_set(degs_up_featureset, slot=\"STIM-up-DEGs\")\n",
-    "file.features.add_feature_set(degs_dw_featureset, slot=\"STIM-down-DEGs\")"
+    "# Link feature sets to artifact\n",
+    "artifact.features.add_feature_set(degs_up_featureset, slot=\"STIM-up-DEGs\")\n",
+    "artifact.features.add_feature_set(degs_dw_featureset, slot=\"STIM-down-DEGs\")"
    ]
   },
   {
@@ -465,7 +465,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file.describe()"
+    "artifact.describe()"
    ]
   },
   {
@@ -495,7 +495,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Querying for all files annotated with a cell type:"
+    "Querying for all artifacts annotated with a cell type:"
    ]
   },
   {
@@ -514,7 +514,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.File.filter(cell_types=celltypes.tem_trm_cytotoxic_t_cells).df()"
+    "ln.Artifact.filter(cell_types=celltypes.tem_trm_cytotoxic_t_cells).df()"
    ]
   },
   {
@@ -560,7 +560,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Query files from a pathway:"
+    "Query artifacts from a pathway:"
    ]
   },
   {
@@ -569,7 +569,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.File.filter(feature_sets__pathways__name__icontains=\"interferon-beta\").first()"
+    "ln.Artifact.filter(feature_sets__pathways__name__icontains=\"interferon-beta\").first()"
    ]
   },
   {
