--- a/docs/facs3.ipynb
+++ b/docs/facs3.ipynb
@@ -57,7 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lb.CellMarker.filter().df().head()"
+    "lb.CellMarker.df().head()"
    ]
   },
   {
@@ -98,7 +98,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Query files by markers ![](https://img.shields.io/badge/Access-10b981) "
+    "## Query artifacts by markers ![](https://img.shields.io/badge/Access-10b981) "
    ]
   },
   {
@@ -123,7 +123,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.File.filter(feature_sets__in=panels_with_cd8).df()"
+    "ln.Artifact.filter(feature_sets__in=panels_with_cd8).df()"
    ]
   },
   {
@@ -155,8 +155,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "files = ln.File.filter(feature_sets__in=panels_with_cd8).list()\n",
-    "file1, file2 = files[0], files[1]"
+    "artifacts = ln.Artifact.filter(feature_sets__in=panels_with_cd8).list()\n",
+    "file1, file2 = artifacts[0], artifacts[1]"
    ]
   },
   {
