--- a/docs/developmental_stage.ipynb
+++ b/docs/developmental_stage.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Developmental Stage ontologies"
+    "# Developmental Stage"
    ]
   },
   {
